cleanup & fixed overflow scoll-bar in loading screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,3 @@ body {
 code {
   font-family: 'TravelingTypeWriterFont';
 }
-
-html {
-  overflow-y: scroll;
-}
